# homework12

./: README.md
.github/workflows/: workflow12.yaml
src/: CMakeLists.txt  avg_reducer.cpp  disp_reducer.cpp  mapper.cpp  test_avg.sh  test_disp.sh  test_mapper.sh
